--- a/src/map.html
+++ b/src/map.html
@@ -45,8 +45,7 @@
 			<script>
 
          var margin = {top: 100, right: 50, bottom: 100, left: 700}, 
-  				//margin2 = {top: 100, right: 850, bottom: 100, left: 150},
-          margin2 = {top: 100, right: 10, bottom: 100, left: 50},
+  			  margin2 = {top: 100, right: 10, bottom: 100, left: 50},
 					margin0 = {top: 100, right: 10, bottom: 100, left: 50},
 					width = 1100 - margin0.left - margin0.right,
 					heightscreen = 700,
@@ -60,9 +59,9 @@
 				var parseGM = d3.time.format("%b %Y").parse;
 
 				var y = d3.scale.linear().range([0,height]),
-					y2 = d3.scale.linear().range([0,height2]), //scalay
+					y2 = d3.scale.linear().range([0,height2]), 
 					x = d3.scale.linear().range([0,width]),
-					x2 = d3.scale.linear().range([0,10]); //mas delgado
+					x2 = d3.scale.linear().range([0,10]); 
 
 				var yAxis = d3.svg.axis().scale(y).orient("left").tickSize(1),
 					yAxis2 = d3.svg.axis().scale(y2).orient("left").tickSize(1),
