--- a/src/map.html
+++ b/src/map.html
@@ -33,9 +33,10 @@
 				<OPTION VALUE="11">CHR 11</OPTION> 
 				<OPTION VALUE="12">CHR 12</OPTION> 
 			</SELECT>
-			&nbsp; &nbsp; &nbsp; &nbsp;
-      <a class="button blue" href="#" onclick="chr_select(document.getElementById('selCombo').value,1,'data.csv','data_qtl.csv');">Submit</a>
-      <a class="button blue" href="#" onclick="chr_selectx4(document.getElementById('selCombo').value,1,'datax4.csv','data_qtlx4.csv');">Submitx4</a>
+			<br>
+      <a class="button blue" href="#" onclick="chr_select(document.getElementById('selCombo').value,1,'data.csv','data_qtl.csv');">Submit DMap</a>
+      <br>
+      <a class="button blue" href="#" onclick="chr_selectx4(document.getElementById('selCombo').value,1,'datax4.csv','data_qtlx4.csv');">Submit Tetraploid</a>
 			<script src="http://d3js.org/d3.v3.min.js"></script>
       <!--<script src="d3.js"></script>-->
 			<script src="dmap.js"></script>
